--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "d3-dsv": "^1.1.1",
-    "nightmare": "^3.0.1"
+    "nightmare": "^3.0.1",
+    "vo": "^4.0.2"
   },
   "devDependencies": {
     "mocha": "^6.1.3"
