--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "d3-dsv": "^1.1.1",
+    "jquery": "^3.4.0",
     "nightmare": "^3.0.1",
     "vo": "^4.0.2"
   },
