--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.6.2",
     "d3-dsv": "^1.1.1",
     "jquery": "^3.4.0",
     "nightmare": "^3.0.1",
