add client side

--- a/server/package.json
+++ b/server/package.json
@@ -16,5 +16,8 @@
     "koa-router": "^7.4.0",
     "mongoose": "^5.5.2",
     "mongoose-to-csv": "^0.1.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0"
   }
 }
