--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google-cloud/storage": "^2.5.0",
     "bcrypt": "^3.0.6",
+    "dotenv": "^8.0.0",
     "gapi-client": "0.0.3",
     "googleapis": "^39.2.0",
     "koa": "^2.7.0",
